--- a/wsgiadmin/templates/db.html
+++ b/wsgiadmin/templates/db.html
@@ -15,13 +15,13 @@
             if (orly) {
                 var db = $(this).attr('rel');
                 $.ajax({
-                    url:"{% url wsgiadmin.db.views.rm dbtype=dbtype %}",
+                    url:"{% url db_remove dbtype=dbtype %}",
                     type:"POST",
                     data:{'dbname':db, 'csrfmiddlewaretoken':'{{ csrf_token }}' },
                     dataType:"json",
                     success:function(data) {
                         if (data.result == 'OK') {
-                            el.parent().html("{% trans "database sucessfuly removed" %}");
+                            el.parent().html(data.messages[1]);
                         } else {
                             alert(data.messages);
                         }
@@ -36,10 +36,6 @@
 
 {% block content %}
     <div id="message-box"></div>
-
-    {% if dbtype != 'all' %}
-        <h2>{{ dbtype }}</h2>
-    {% endif %}
 
     <div id="db_dialog"></div>
 
@@ -71,9 +67,29 @@
             <tr>
                 <td colspan="2">
                     <div class="pagination">
-                        {% with dbs as objects %}
-                            {% include "paginator.html" %}
-                        {% endwith %}
+                        {% if dbs.has_previous %}
+                            <a href="{% url wsgiadmin.db.views.show dbtype=dbtype 1 %}" title="{% trans "First page" %}">&laquo; {% trans "First" %}</a>
+                        {% endif %}
+                        {% if dbs.has_previous %}
+                            <a href="{% url wsgiadmin.db.views.show dbtype=dbtype gs.previous_page_number %}" title="{% trans "Previous page" %}">
+                                &laquo; {% trans "Previous" %}
+                            </a>
+                        {% endif %}
+
+                        {% for p in paginator.page_range %}
+                            {% if p == num_page %}
+                                <a href="{% url wsgiadmin.db.views.show dbtype=dbtype page=p %}" class="number current" title="{{ p }}">{{ p }}</a>
+                            {% else %}
+                                <a href="{% url wsgiadmin.db.views.show dbtype=dbtype page=p %}" class="number" title="{{ p }}">{{ p }}</a>
+                            {% endif %}
+                        {% endfor %}
+
+                        {% if dbs.has_next %}
+                            <a href="{% url wsgiadmin.db.views.show dbtype=dbtype page=dbs.next_page_number %}" title="{% trans "Next page" %}">{% trans "Next" %} &raquo;</a>
+                        {% endif %}
+                        {% if dbs.has_next %}
+                            <a href="{% url wsgiadmin.db.views.show dbtype=dbtype page=dbs.num_pages %}" title="{% trans "Last page" %}">{% trans "Last" %} &raquo;</a>
+                        {% endif %}
                     </div>
                     <div class="clear"></div>
                 </td>
