--- a/wsgiadmin/templates/domains.html
+++ b/wsgiadmin/templates/domains.html
@@ -10,7 +10,7 @@
 
     $(function() {
         $("#objects_list .object_delete").click(function() {
-            var orly = confirm('{% trans "Are you sure you want to remove this database?" %}');
+            var orly = confirm('{% trans "Are you sure?" %}');
             el = $(this);
             if (orly) {
                 var domain = $(this).attr('rel');
@@ -51,9 +51,9 @@
             <th>{% trans "Action" %}</th>
         </tr>
         </thead>
-        {% if domains %}
+        {% if object_list %}
             <tbody id="objects_list">
-            {% for domain in domains.object_list %}
+            {% for domain in object_list %}
                 <tr>
                     <td>{{ domain.pub_date|date:"d.m.Y" }}</td>
                     <td>{{ domain.name }}</td>
@@ -69,9 +69,7 @@
             <tr>
                 <td colspan="3">
                     <div class="pagination">
-                        {% with domains as objects %}
-                            {% include "paginator.html" %}
-                        {% endwith %}
+                        {% include "paginator.html" %}
                     </div>
                     <div class="clear"></div>
                 </td>
@@ -80,7 +78,7 @@
         {% else %}
             <tbody>
             <tr>
-                <td colspan="3">{% trans "No domain have inserted ant it means you can't use all services. Just use the left menu and fix it." %}</td>
+                <td colspan="3">{% trans "No domain have been inserted and it means you can't use all services. Just use the left menu and fix it." %}</td>
             </tr>
             </tbody>
         {% endif %}
