--- a/wsgiadmin/templates/login_reg.html
+++ b/wsgiadmin/templates/login_reg.html
@@ -104,7 +104,7 @@
                         </tr>
                         <tr>
                             <th>
-                                <label for="id_password1">Heslo poprvé *:</label>
+                                <label for="id_password1">Password *:</label>
                             </th>
                             <td>
                                 <input type="password" name="password1" id="id_password1"/>
@@ -112,7 +112,7 @@
                         </tr>
                         <tr>
                             <th>
-                                <label for="id_password2">Heslo pro kontrolu *:</label>
+                                <label for="id_password2">Password again *:</label>
                             </th>
                             <td>
                                 <input type="password" name="password2" id="id_password2"/>
