--- a/wsgiadmin/templates/admin.html
+++ b/wsgiadmin/templates/admin.html
@@ -54,7 +54,7 @@
                         <li{% if menu_active == "invoices" %} class="active"{% endif %}><a href="{% url wsgiadmin.invoices.views.show %}" class="red">{% trans "Invoices" %}<span></span></a></li>
                         {% endif %}
                         <li{% if menu_active == "domains" %} class="active"{% endif %}><a href="{% url domains_list %}">{% trans "Domains" %}<span></span></a></li>
-                        <li{% if menu_active == "webapps" %} class="active"{% endif %}><a href="{% url wsgiadmin.apacheconf.views.apache %}">{% trans "Web apps" %}<span></span></a></li>
+                        <li{% if menu_active == "webapps" %} class="active"{% endif %}><a href="{% url app_list %}">{% trans "Web apps" %}<span></span></a></li>
                         <li{% if menu_active == "dbs" %} class="active"{% endif %}><a href="{% url db_list %}">{% trans "Databases" %}<span></span></a></li>
                         <li{% if menu_active == "ftps" %} class="active"{% endif %}><a href="{% url wsgiadmin.ftps.views.show %}">{% trans "FTP" %}<span></span></a></li>
                         <li{% if menu_active == "emails" %} class="active"{% endif %}><a href="{% url wsgiadmin.emails.views.boxes %}">{% trans "E-mails" %}<span></span></a></li>
@@ -134,7 +134,7 @@
                                 <li><a href="{% url wsgiadmin.apacheconf.views.add_static "0" %}">{% trans "Add static page" %}</a></li>
                                 <li><a href="{% url wsgiadmin.apacheconf.views.add_static "1" %}">{% trans "Add PHP app" %}</a></li>
                                 <li><a href="{% url app_wsgi %}">{% trans "Add WSGI app" %}</a></li>
-                                <li><a href="{% url wsgiadmin.apacheconf.views.apache %}">{% trans "Your apps" %}</a></li>
+                                <li><a href="{% url app_list %}">{% trans "Your apps" %}</a></li>
                             </ul>
                         </li>
                     </ul>
